--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>orderbook-fusion-ui</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="orderbook-fusion-ui" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <title>Bloctrade — Web3 Trading Terminal</title>
+
+    <meta name="description" content="Bloctrade — Web3 Trading Interface" />
+    <meta name="author" content="Bloctrade Team" />
+
+    <meta property="og:title" content="Bloctrade — Web3 Terminal" />
+    <meta property="og:description" content="Bloctrade — Modern Web3 Order Book UI" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://example.com/your-preview-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@bloctrade_app" />
+    <meta name="twitter:image" content="https://example.com/your-preview-image.png" />
   </head>
 
   <body>
@@ -22,3 +24,4 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
